[bumpversion]
current_version = 0.6.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:commlib/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[options]
packages = find:
zip_safe = False
install_requires =
    pika
    paho-mqtt
    redis
    ujson

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

[mypy]
ignore_missing_imports=true

[tool:pytest]
addopts = --mypy
