[metadata]
name = commlib-py
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Communication Lirary for Python implementing the most common communication patterns for CyberPhysical Systems.
url = https://github.com/robotics-4-all/commlib-py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bumpversion]
current_version = 0.6.3
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:commlib/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[options]
packages = find:
zip_safe = False
install_requires =
    pika
    paho-mqtt
    redis
    ujson

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

[mypy]
ignore_missing_imports=true

[tool:pytest]
addopts = --mypy
